# learn-gamedev

./: .gitignore  CMakeLists.txt  README.md
000-test/: Makefile  build.sh  main.cpp
001-chess/: Makefile  main.cpp
001-hexchess/: ChessGame.cpp  ChessGame.hpp  Glinski.cpp  Glinski.hpp  main.cpp
002-WebGL/: fragment.frag  index.html  index.js  vertex.vert
